# sequence

./: CMakeLists.txt  LICENSE  README.md
gtest/: CMakeLists.txt
include/: sequence.hpp
include/sequence/: global_operators.hpp  sequence.hpp  sequence_addition.hpp  sequence_binary_expression.hpp  sequence_binary_expression_traits.hpp  sequence_division.hpp  sequence_expression.hpp  sequence_expression_templates.hpp  sequence_expression_traits.hpp  sequence_multiplication.hpp  sequence_subtraction.hpp
tests/: CMakeLists.txt  sequence_arithmetic_operator_test_template.hpp  sequence_arithmetic_operator_tests.cpp  sequence_assignment_operator_tests.cpp  sequence_compound_assignment_operator_test_template.hpp  sequence_compound_assignment_operator_tests.cpp  sequence_constructor_tests.cpp  sequence_nested_expression_tests.cpp
